<resources>
    <string name="app_name">Summachar Intern Assignment</string>
    <string name="top_stories">Top Stories</string>
    <string name="india">India</string>
    <string name="business">Business</string>
    <string name="entertainment">Entertaiment</string>
    <string name="health">Health</string>
    <string name="title_activity_my_tabbed">MyTabbedActivity</string>
    <string name="tab_text_1">Tab 1</string>
    <string name="tab_text_2">Tab 2</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>